APIs/googleapis.com/tagmanager/v1/python-client/README.md
# openapi-client
This API allows clients to access and modify container and tag configuration.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://tagmanager.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://tagmanager.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.AccountsApi(api_client)
    account_id = 'account_id_example' # str | The GTM Account ID.
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    container = openapi_client.Container() # Container |  (optional)

    try:
        api_response = api_instance.tagmanager_accounts_containers_create(account_id, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, container=container)
        print("The response of AccountsApi->tagmanager_accounts_containers_create:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling AccountsApi->tagmanager_accounts_containers_create: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://tagmanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**tagmanager_accounts_containers_create**](docs/AccountsApi.md#tagmanager_accounts_containers_create) | **POST** /tagmanager/v1/accounts/{accountId}/containers | 
*AccountsApi* | [**tagmanager_accounts_containers_delete**](docs/AccountsApi.md#tagmanager_accounts_containers_delete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*AccountsApi* | [**tagmanager_accounts_containers_environments_create**](docs/AccountsApi.md#tagmanager_accounts_containers_environments_create) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments | 
*AccountsApi* | [**tagmanager_accounts_containers_environments_delete**](docs/AccountsApi.md#tagmanager_accounts_containers_environments_delete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*AccountsApi* | [**tagmanager_accounts_containers_environments_get**](docs/AccountsApi.md#tagmanager_accounts_containers_environments_get) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*AccountsApi* | [**tagmanager_accounts_containers_environments_list**](docs/AccountsApi.md#tagmanager_accounts_containers_environments_list) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments | 
*AccountsApi* | [**tagmanager_accounts_containers_environments_update**](docs/AccountsApi.md#tagmanager_accounts_containers_environments_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*AccountsApi* | [**tagmanager_accounts_containers_folders_create**](docs/AccountsApi.md#tagmanager_accounts_containers_folders_create) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders | 
*AccountsApi* | [**tagmanager_accounts_containers_folders_delete**](docs/AccountsApi.md#tagmanager_accounts_containers_folders_delete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*AccountsApi* | [**tagmanager_accounts_containers_folders_entities_list**](docs/AccountsApi.md#tagmanager_accounts_containers_folders_entities_list) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId}/entities | 
*AccountsApi* | [**tagmanager_accounts_containers_folders_get**](docs/AccountsApi.md#tagmanager_accounts_containers_folders_get) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*AccountsApi* | [**tagmanager_accounts_containers_folders_list**](docs/AccountsApi.md#tagmanager_accounts_containers_folders_list) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders | 
*AccountsApi* | [**tagmanager_accounts_containers_folders_update**](docs/AccountsApi.md#tagmanager_accounts_containers_folders_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*AccountsApi* | [**tagmanager_accounts_containers_get**](docs/AccountsApi.md#tagmanager_accounts_containers_get) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*AccountsApi* | [**tagmanager_accounts_containers_list**](docs/AccountsApi.md#tagmanager_accounts_containers_list) | **GET** /tagmanager/v1/accounts/{accountId}/containers | 
*AccountsApi* | [**tagmanager_accounts_containers_move_folders_update**](docs/AccountsApi.md#tagmanager_accounts_containers_move_folders_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/move_folders/{folderId} | 
*AccountsApi* | [**tagmanager_accounts_containers_reauthorize_environments_update**](docs/AccountsApi.md#tagmanager_accounts_containers_reauthorize_environments_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/reauthorize_environments/{environmentId} | 
*AccountsApi* | [**tagmanager_accounts_containers_tags_create**](docs/AccountsApi.md#tagmanager_accounts_containers_tags_create) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags | 
*AccountsApi* | [**tagmanager_accounts_containers_tags_delete**](docs/AccountsApi.md#tagmanager_accounts_containers_tags_delete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*AccountsApi* | [**tagmanager_accounts_containers_tags_get**](docs/AccountsApi.md#tagmanager_accounts_containers_tags_get) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*AccountsApi* | [**tagmanager_accounts_containers_tags_list**](docs/AccountsApi.md#tagmanager_accounts_containers_tags_list) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags | 
*AccountsApi* | [**tagmanager_accounts_containers_tags_update**](docs/AccountsApi.md#tagmanager_accounts_containers_tags_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*AccountsApi* | [**tagmanager_accounts_containers_triggers_create**](docs/AccountsApi.md#tagmanager_accounts_containers_triggers_create) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers | 
*AccountsApi* | [**tagmanager_accounts_containers_triggers_delete**](docs/AccountsApi.md#tagmanager_accounts_containers_triggers_delete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*AccountsApi* | [**tagmanager_accounts_containers_triggers_get**](docs/AccountsApi.md#tagmanager_accounts_containers_triggers_get) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*AccountsApi* | [**tagmanager_accounts_containers_triggers_list**](docs/AccountsApi.md#tagmanager_accounts_containers_triggers_list) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers | 
*AccountsApi* | [**tagmanager_accounts_containers_triggers_update**](docs/AccountsApi.md#tagmanager_accounts_containers_triggers_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*AccountsApi* | [**tagmanager_accounts_containers_update**](docs/AccountsApi.md#tagmanager_accounts_containers_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*AccountsApi* | [**tagmanager_accounts_containers_variables_create**](docs/AccountsApi.md#tagmanager_accounts_containers_variables_create) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables | 
*AccountsApi* | [**tagmanager_accounts_containers_variables_delete**](docs/AccountsApi.md#tagmanager_accounts_containers_variables_delete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*AccountsApi* | [**tagmanager_accounts_containers_variables_get**](docs/AccountsApi.md#tagmanager_accounts_containers_variables_get) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*AccountsApi* | [**tagmanager_accounts_containers_variables_list**](docs/AccountsApi.md#tagmanager_accounts_containers_variables_list) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables | 
*AccountsApi* | [**tagmanager_accounts_containers_variables_update**](docs/AccountsApi.md#tagmanager_accounts_containers_variables_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_create**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_create) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_delete**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_delete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_get**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_get) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_list**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_list) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_publish**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_publish) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/publish | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_restore**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_restore) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/restore | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_undelete**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_undelete) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/undelete | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_update**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_update) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*AccountsApi* | [**tagmanager_accounts_get**](docs/AccountsApi.md#tagmanager_accounts_get) | **GET** /tagmanager/v1/accounts/{accountId} | 
*AccountsApi* | [**tagmanager_accounts_list**](docs/AccountsApi.md#tagmanager_accounts_list) | **GET** /tagmanager/v1/accounts | 
*AccountsApi* | [**tagmanager_accounts_permissions_create**](docs/AccountsApi.md#tagmanager_accounts_permissions_create) | **POST** /tagmanager/v1/accounts/{accountId}/permissions | 
*AccountsApi* | [**tagmanager_accounts_permissions_delete**](docs/AccountsApi.md#tagmanager_accounts_permissions_delete) | **DELETE** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*AccountsApi* | [**tagmanager_accounts_permissions_get**](docs/AccountsApi.md#tagmanager_accounts_permissions_get) | **GET** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*AccountsApi* | [**tagmanager_accounts_permissions_list**](docs/AccountsApi.md#tagmanager_accounts_permissions_list) | **GET** /tagmanager/v1/accounts/{accountId}/permissions | 
*AccountsApi* | [**tagmanager_accounts_permissions_update**](docs/AccountsApi.md#tagmanager_accounts_permissions_update) | **PUT** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*AccountsApi* | [**tagmanager_accounts_update**](docs/AccountsApi.md#tagmanager_accounts_update) | **PUT** /tagmanager/v1/accounts/{accountId} | 


## Documentation For Models

 - [Account](docs/Account.md)
 - [AccountAccess](docs/AccountAccess.md)
 - [Condition](docs/Condition.md)
 - [Container](docs/Container.md)
 - [ContainerAccess](docs/ContainerAccess.md)
 - [ContainerVersion](docs/ContainerVersion.md)
 - [ContainerVersionHeader](docs/ContainerVersionHeader.md)
 - [CreateContainerVersionRequestVersionOptions](docs/CreateContainerVersionRequestVersionOptions.md)
 - [CreateContainerVersionResponse](docs/CreateContainerVersionResponse.md)
 - [Environment](docs/Environment.md)
 - [Folder](docs/Folder.md)
 - [FolderEntities](docs/FolderEntities.md)
 - [ListAccountUsersResponse](docs/ListAccountUsersResponse.md)
 - [ListAccountsResponse](docs/ListAccountsResponse.md)
 - [ListContainerVersionsResponse](docs/ListContainerVersionsResponse.md)
 - [ListContainersResponse](docs/ListContainersResponse.md)
 - [ListEnvironmentsResponse](docs/ListEnvironmentsResponse.md)
 - [ListFoldersResponse](docs/ListFoldersResponse.md)
 - [ListTagsResponse](docs/ListTagsResponse.md)
 - [ListTriggersResponse](docs/ListTriggersResponse.md)
 - [ListVariablesResponse](docs/ListVariablesResponse.md)
 - [Macro](docs/Macro.md)
 - [Parameter](docs/Parameter.md)
 - [PublishContainerVersionResponse](docs/PublishContainerVersionResponse.md)
 - [Rule](docs/Rule.md)
 - [SetupTag](docs/SetupTag.md)
 - [Tag](docs/Tag.md)
 - [TeardownTag](docs/TeardownTag.md)
 - [Trigger](docs/Trigger.md)
 - [UserAccess](docs/UserAccess.md)
 - [Variable](docs/Variable.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/tagmanager.delete.containers**: Delete your Google Tag Manager containers
 - **https://www.googleapis.com/auth/tagmanager.edit.containers**: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
 - **https://www.googleapis.com/auth/tagmanager.edit.containerversions**: Manage your Google Tag Manager container versions
 - **https://www.googleapis.com/auth/tagmanager.manage.accounts**: View and manage your Google Tag Manager accounts
 - **https://www.googleapis.com/auth/tagmanager.manage.users**: Manage user permissions of your Google Tag Manager account and container
 - **https://www.googleapis.com/auth/tagmanager.publish**: Publish your Google Tag Manager container versions
 - **https://www.googleapis.com/auth/tagmanager.readonly**: View your Google Tag Manager container and its subcomponents

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/tagmanager.delete.containers**: Delete your Google Tag Manager containers
 - **https://www.googleapis.com/auth/tagmanager.edit.containers**: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
 - **https://www.googleapis.com/auth/tagmanager.edit.containerversions**: Manage your Google Tag Manager container versions
 - **https://www.googleapis.com/auth/tagmanager.manage.accounts**: View and manage your Google Tag Manager accounts
 - **https://www.googleapis.com/auth/tagmanager.manage.users**: Manage user permissions of your Google Tag Manager account and container
 - **https://www.googleapis.com/auth/tagmanager.publish**: Publish your Google Tag Manager container versions
 - **https://www.googleapis.com/auth/tagmanager.readonly**: View your Google Tag Manager container and its subcomponents


## Author




