APIs/googleapis.com/tagmanager/v2/python-client/README.md
# openapi-client
This API allows clients to access and modify container and tag configuration.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://tagmanager.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://tagmanager.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.AccountsApi(api_client)
    path = 'path_example' # str | GTM Container's API relative path. Example: accounts/{account_id}/containers/{container_id}
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    allow_user_permission_feature_update = True # bool | Must be set to true to allow features.user_permissions to change from false to true. If this operation causes an update but this bit is false, the operation will fail. (optional)
    container_id = 'container_id_example' # str | ID of container that will be merged into the current container. (optional)
    setting_source = 'setting_source_example' # str | Specify the source of config setting after combine (optional)

    try:
        api_response = api_instance.tagmanager_accounts_containers_combine(path, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, allow_user_permission_feature_update=allow_user_permission_feature_update, container_id=container_id, setting_source=setting_source)
        print("The response of AccountsApi->tagmanager_accounts_containers_combine:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling AccountsApi->tagmanager_accounts_containers_combine: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://tagmanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**tagmanager_accounts_containers_combine**](docs/AccountsApi.md#tagmanager_accounts_containers_combine) | **POST** /tagmanager/v2/{path}:combine | 
*AccountsApi* | [**tagmanager_accounts_containers_create**](docs/AccountsApi.md#tagmanager_accounts_containers_create) | **POST** /tagmanager/v2/{parent}/containers | 
*AccountsApi* | [**tagmanager_accounts_containers_destinations_link**](docs/AccountsApi.md#tagmanager_accounts_containers_destinations_link) | **POST** /tagmanager/v2/{parent}/destinations:link | 
*AccountsApi* | [**tagmanager_accounts_containers_destinations_list**](docs/AccountsApi.md#tagmanager_accounts_containers_destinations_list) | **GET** /tagmanager/v2/{parent}/destinations | 
*AccountsApi* | [**tagmanager_accounts_containers_environments_create**](docs/AccountsApi.md#tagmanager_accounts_containers_environments_create) | **POST** /tagmanager/v2/{parent}/environments | 
*AccountsApi* | [**tagmanager_accounts_containers_environments_list**](docs/AccountsApi.md#tagmanager_accounts_containers_environments_list) | **GET** /tagmanager/v2/{parent}/environments | 
*AccountsApi* | [**tagmanager_accounts_containers_environments_reauthorize**](docs/AccountsApi.md#tagmanager_accounts_containers_environments_reauthorize) | **POST** /tagmanager/v2/{path}:reauthorize | 
*AccountsApi* | [**tagmanager_accounts_containers_list**](docs/AccountsApi.md#tagmanager_accounts_containers_list) | **GET** /tagmanager/v2/{parent}/containers | 
*AccountsApi* | [**tagmanager_accounts_containers_lookup**](docs/AccountsApi.md#tagmanager_accounts_containers_lookup) | **GET** /tagmanager/v2/accounts/containers:lookup | 
*AccountsApi* | [**tagmanager_accounts_containers_move_tag_id**](docs/AccountsApi.md#tagmanager_accounts_containers_move_tag_id) | **POST** /tagmanager/v2/{path}:move_tag_id | 
*AccountsApi* | [**tagmanager_accounts_containers_snippet**](docs/AccountsApi.md#tagmanager_accounts_containers_snippet) | **GET** /tagmanager/v2/{path}:snippet | 
*AccountsApi* | [**tagmanager_accounts_containers_version_headers_latest**](docs/AccountsApi.md#tagmanager_accounts_containers_version_headers_latest) | **GET** /tagmanager/v2/{parent}/version_headers:latest | 
*AccountsApi* | [**tagmanager_accounts_containers_version_headers_list**](docs/AccountsApi.md#tagmanager_accounts_containers_version_headers_list) | **GET** /tagmanager/v2/{parent}/version_headers | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_live**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_live) | **GET** /tagmanager/v2/{parent}/versions:live | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_publish**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_publish) | **POST** /tagmanager/v2/{path}:publish | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_set_latest**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_set_latest) | **POST** /tagmanager/v2/{path}:set_latest | 
*AccountsApi* | [**tagmanager_accounts_containers_versions_undelete**](docs/AccountsApi.md#tagmanager_accounts_containers_versions_undelete) | **POST** /tagmanager/v2/{path}:undelete | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_built_in_variables_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_built_in_variables_create) | **POST** /tagmanager/v2/{parent}/built_in_variables | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_built_in_variables_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_built_in_variables_list) | **GET** /tagmanager/v2/{parent}/built_in_variables | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_built_in_variables_revert**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_built_in_variables_revert) | **POST** /tagmanager/v2/{path}/built_in_variables:revert | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_clients_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_clients_create) | **POST** /tagmanager/v2/{parent}/clients | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_clients_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_clients_list) | **GET** /tagmanager/v2/{parent}/clients | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_create) | **POST** /tagmanager/v2/{parent}/workspaces | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_create_version**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_create_version) | **POST** /tagmanager/v2/{path}:create_version | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_folders_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_folders_create) | **POST** /tagmanager/v2/{parent}/folders | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_folders_entities**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_folders_entities) | **POST** /tagmanager/v2/{path}:entities | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_folders_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_folders_list) | **GET** /tagmanager/v2/{parent}/folders | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_folders_move_entities_to_folder**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_folders_move_entities_to_folder) | **POST** /tagmanager/v2/{path}:move_entities_to_folder | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_get_status**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_get_status) | **GET** /tagmanager/v2/{path}/status | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_gtag_config_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_gtag_config_create) | **POST** /tagmanager/v2/{parent}/gtag_config | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_gtag_config_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_gtag_config_list) | **GET** /tagmanager/v2/{parent}/gtag_config | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_list) | **GET** /tagmanager/v2/{parent}/workspaces | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_quick_preview**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_quick_preview) | **POST** /tagmanager/v2/{path}:quick_preview | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_resolve_conflict**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_resolve_conflict) | **POST** /tagmanager/v2/{path}:resolve_conflict | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_sync**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_sync) | **POST** /tagmanager/v2/{path}:sync | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_tags_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_tags_create) | **POST** /tagmanager/v2/{parent}/tags | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_tags_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_tags_list) | **GET** /tagmanager/v2/{parent}/tags | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_templates_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_templates_create) | **POST** /tagmanager/v2/{parent}/templates | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_templates_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_templates_list) | **GET** /tagmanager/v2/{parent}/templates | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_transformations_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_transformations_create) | **POST** /tagmanager/v2/{parent}/transformations | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_transformations_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_transformations_list) | **GET** /tagmanager/v2/{parent}/transformations | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_triggers_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_triggers_create) | **POST** /tagmanager/v2/{parent}/triggers | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_triggers_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_triggers_list) | **GET** /tagmanager/v2/{parent}/triggers | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_variables_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_variables_create) | **POST** /tagmanager/v2/{parent}/variables | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_variables_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_variables_list) | **GET** /tagmanager/v2/{parent}/variables | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_zones_create**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_zones_create) | **POST** /tagmanager/v2/{parent}/zones | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_zones_list**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_zones_list) | **GET** /tagmanager/v2/{parent}/zones | 
*AccountsApi* | [**tagmanager_accounts_containers_workspaces_zones_revert**](docs/AccountsApi.md#tagmanager_accounts_containers_workspaces_zones_revert) | **POST** /tagmanager/v2/{path}:revert | 
*AccountsApi* | [**tagmanager_accounts_list**](docs/AccountsApi.md#tagmanager_accounts_list) | **GET** /tagmanager/v2/accounts | 
*AccountsApi* | [**tagmanager_accounts_user_permissions_create**](docs/AccountsApi.md#tagmanager_accounts_user_permissions_create) | **POST** /tagmanager/v2/{parent}/user_permissions | 
*AccountsApi* | [**tagmanager_accounts_user_permissions_delete**](docs/AccountsApi.md#tagmanager_accounts_user_permissions_delete) | **DELETE** /tagmanager/v2/{path} | 
*AccountsApi* | [**tagmanager_accounts_user_permissions_get**](docs/AccountsApi.md#tagmanager_accounts_user_permissions_get) | **GET** /tagmanager/v2/{path} | 
*AccountsApi* | [**tagmanager_accounts_user_permissions_list**](docs/AccountsApi.md#tagmanager_accounts_user_permissions_list) | **GET** /tagmanager/v2/{parent}/user_permissions | 
*AccountsApi* | [**tagmanager_accounts_user_permissions_update**](docs/AccountsApi.md#tagmanager_accounts_user_permissions_update) | **PUT** /tagmanager/v2/{path} | 


## Documentation For Models

 - [Account](docs/Account.md)
 - [AccountAccess](docs/AccountAccess.md)
 - [AccountFeatures](docs/AccountFeatures.md)
 - [BuiltInVariable](docs/BuiltInVariable.md)
 - [Client](docs/Client.md)
 - [Condition](docs/Condition.md)
 - [Container](docs/Container.md)
 - [ContainerAccess](docs/ContainerAccess.md)
 - [ContainerFeatures](docs/ContainerFeatures.md)
 - [ContainerVersion](docs/ContainerVersion.md)
 - [ContainerVersionHeader](docs/ContainerVersionHeader.md)
 - [CreateBuiltInVariableResponse](docs/CreateBuiltInVariableResponse.md)
 - [CreateContainerVersionRequestVersionOptions](docs/CreateContainerVersionRequestVersionOptions.md)
 - [CreateContainerVersionResponse](docs/CreateContainerVersionResponse.md)
 - [CustomTemplate](docs/CustomTemplate.md)
 - [Destination](docs/Destination.md)
 - [Entity](docs/Entity.md)
 - [Environment](docs/Environment.md)
 - [Folder](docs/Folder.md)
 - [FolderEntities](docs/FolderEntities.md)
 - [GalleryReference](docs/GalleryReference.md)
 - [GetContainerSnippetResponse](docs/GetContainerSnippetResponse.md)
 - [GetWorkspaceStatusResponse](docs/GetWorkspaceStatusResponse.md)
 - [GtagConfig](docs/GtagConfig.md)
 - [ListAccountsResponse](docs/ListAccountsResponse.md)
 - [ListClientsResponse](docs/ListClientsResponse.md)
 - [ListContainerVersionsResponse](docs/ListContainerVersionsResponse.md)
 - [ListContainersResponse](docs/ListContainersResponse.md)
 - [ListDestinationsResponse](docs/ListDestinationsResponse.md)
 - [ListEnabledBuiltInVariablesResponse](docs/ListEnabledBuiltInVariablesResponse.md)
 - [ListEnvironmentsResponse](docs/ListEnvironmentsResponse.md)
 - [ListFoldersResponse](docs/ListFoldersResponse.md)
 - [ListGtagConfigResponse](docs/ListGtagConfigResponse.md)
 - [ListTagsResponse](docs/ListTagsResponse.md)
 - [ListTemplatesResponse](docs/ListTemplatesResponse.md)
 - [ListTransformationsResponse](docs/ListTransformationsResponse.md)
 - [ListTriggersResponse](docs/ListTriggersResponse.md)
 - [ListUserPermissionsResponse](docs/ListUserPermissionsResponse.md)
 - [ListVariablesResponse](docs/ListVariablesResponse.md)
 - [ListWorkspacesResponse](docs/ListWorkspacesResponse.md)
 - [ListZonesResponse](docs/ListZonesResponse.md)
 - [MergeConflict](docs/MergeConflict.md)
 - [Parameter](docs/Parameter.md)
 - [PublishContainerVersionResponse](docs/PublishContainerVersionResponse.md)
 - [QuickPreviewResponse](docs/QuickPreviewResponse.md)
 - [RevertBuiltInVariableResponse](docs/RevertBuiltInVariableResponse.md)
 - [RevertClientResponse](docs/RevertClientResponse.md)
 - [RevertFolderResponse](docs/RevertFolderResponse.md)
 - [RevertTagResponse](docs/RevertTagResponse.md)
 - [RevertTemplateResponse](docs/RevertTemplateResponse.md)
 - [RevertTransformationResponse](docs/RevertTransformationResponse.md)
 - [RevertTriggerResponse](docs/RevertTriggerResponse.md)
 - [RevertVariableResponse](docs/RevertVariableResponse.md)
 - [RevertZoneResponse](docs/RevertZoneResponse.md)
 - [SetupTag](docs/SetupTag.md)
 - [SyncStatus](docs/SyncStatus.md)
 - [SyncWorkspaceResponse](docs/SyncWorkspaceResponse.md)
 - [Tag](docs/Tag.md)
 - [TagConsentSetting](docs/TagConsentSetting.md)
 - [TeardownTag](docs/TeardownTag.md)
 - [Transformation](docs/Transformation.md)
 - [Trigger](docs/Trigger.md)
 - [UserPermission](docs/UserPermission.md)
 - [Variable](docs/Variable.md)
 - [VariableFormatValue](docs/VariableFormatValue.md)
 - [Workspace](docs/Workspace.md)
 - [Zone](docs/Zone.md)
 - [ZoneBoundary](docs/ZoneBoundary.md)
 - [ZoneChildContainer](docs/ZoneChildContainer.md)
 - [ZoneTypeRestriction](docs/ZoneTypeRestriction.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/tagmanager.delete.containers**: Delete your Google Tag Manager containers
 - **https://www.googleapis.com/auth/tagmanager.edit.containers**: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
 - **https://www.googleapis.com/auth/tagmanager.edit.containerversions**: Manage your Google Tag Manager container versions
 - **https://www.googleapis.com/auth/tagmanager.manage.accounts**: View and manage your Google Tag Manager accounts
 - **https://www.googleapis.com/auth/tagmanager.manage.users**: Manage user permissions of your Google Tag Manager account and container
 - **https://www.googleapis.com/auth/tagmanager.publish**: Publish your Google Tag Manager container versions
 - **https://www.googleapis.com/auth/tagmanager.readonly**: View your Google Tag Manager container and its subcomponents

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/tagmanager.delete.containers**: Delete your Google Tag Manager containers
 - **https://www.googleapis.com/auth/tagmanager.edit.containers**: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
 - **https://www.googleapis.com/auth/tagmanager.edit.containerversions**: Manage your Google Tag Manager container versions
 - **https://www.googleapis.com/auth/tagmanager.manage.accounts**: View and manage your Google Tag Manager accounts
 - **https://www.googleapis.com/auth/tagmanager.manage.users**: Manage user permissions of your Google Tag Manager account and container
 - **https://www.googleapis.com/auth/tagmanager.publish**: Publish your Google Tag Manager container versions
 - **https://www.googleapis.com/auth/tagmanager.readonly**: View your Google Tag Manager container and its subcomponents


## Author




